<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="T_ANDROIDM_PERMISSION_BUTTON_RETRY">Retry</string>
    <string name="T_ANDROIDM_PERMISSION_BUTTON_SURE">"I'm sure"</string>
    <string name="T_ANDROIDM_PERMISSION_DOWNLOAD_FAILED">Download failed because write permission for this app is no set.</string>
    <string name="T_ANDROIDM_PERMISSION_HEADLINE">Permission denied</string>
    <string name="T_ANDROIDM_PERMISSION_OBB_READ">The app needs read permission in order to complete installation!</string>
    <string name="T_ANDROIDM_PERMISSION_OBB_TEXT">The app needs write permission in order to save additional data for installation!</string>
    <string name="T_ANDROIDM_PERMISSION_STORAGE_TEXT">The app needs write permission in order to save screenshots!</string>
    <string name="T_ANDROIDM_PERMISSION_SURE">Are you sure you want to deny this permission?</string>
    <string name="T_APPNAME">Townsmen</string>
    <string name="T_INFO_PRIVACYPOLICYUPDATE_ACKNOWLEDGED">Acknowledged</string>
    <string name="T_INFO_PRIVACYPOLICYUPDATE_CONTINUE">Continue</string>
    <string name="T_INFO_PRIVACYPOLICYUPDATE_GTC">GTC</string>
    <string name="T_INFO_PRIVACYPOLICYUPDATE_TEXT">We are using device identifiers and similar data for personalized advertisement and analyzing the usages of our products. For more details please read our Terms &amp; Conditions or Privacy Policy. By using this product you are taking note of those terms.</string>
    <string name="T_INFO_PRIVACY_POLICY_TRANSLATED">Privacy Policy</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contentprovider_authority">com.hg.townsmen7.fileprovider</string>
    <string name="default_web_client_id">504904214915-qpim9f54c989c9fdre4mlh13ii05s3mf.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://api-project-504904214915.firebaseio.com</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="gcm_defaultSenderId">504904214915</string>
    <string name="google_api_key">AIzaSyBb3IwjpHx4QS9wmfxN1_SzfEIb_KR0h-Y</string>
    <string name="google_app_id">1:504904214915:android:3213782f9b5145f0</string>
    <string name="google_crash_reporting_api_key">AIzaSyBb3IwjpHx4QS9wmfxN1_SzfEIb_KR0h-Y</string>
    <string name="google_storage_bucket">api-project-504904214915.appspot.com</string>
    <string name="googleplus_app_id">504904214915</string>
    <string name="project_id">api-project-504904214915</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
